--- a/frontend/src/style/Header.css
+++ b/frontend/src/style/Header.css
@@ -14,6 +14,7 @@
     height: 80%;
     text-shadow :#0b0c0d31;
     text-decoration: wavy;
+    opacity: 70%;
 }
 .header-shinobina{
     color: rgba(35, 35, 49, 0.677);
