--- a/frontend/src/style/ChatRoom.css
+++ b/frontend/src/style/ChatRoom.css
@@ -5,6 +5,15 @@
     max-width:700px;
   
 }
+.avators-row{
+    display: flex;
+}
+.avators-row>div{
+    padding: 3px;
+    margin-right: 3px;
+    background-color: rgb(60, 95, 97);
+    border-radius: 2px;
+}
 .ChatRoom-header{
     overflow-y: scroll;
     width: 100%;
